// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSidebar components MainSidebar snapshot 1`] = `
<aside
  className="main-sidebar px-0 col-12 open col-md-3 col-lg-2"
>
  <div
    className="main-navbar"
  >
    <nav
      className="align-items-stretch bg-white flex-md-nowrap border-bottom p-0 navbar navbar-light"
    >
      <a
        className="w-100 mr-0 navbar-brand"
        href="#"
        style={
          Object {
            "lineHeight": "25px",
          }
        }
      >
        <div
          className="d-table m-auto"
        >
          <img
            alt="Logo"
            className="d-inline-block align-top mr-1"
            id="main-logo"
            src={Object {}}
            style={
              Object {
                "maxWidth": "25px",
              }
            }
          />
          <span
            className="d-none d-md-inline ml-1"
          >
            S.G.S.
          </span>
        </div>
      </a>
      <a
        className="toggle-sidebar d-sm-inline d-md-none d-lg-none"
        onClick={[Function]}
      >
        <i
          className="material-icons"
          id="hoa"
        >
          
        </i>
      </a>
    </nav>
  </div>
  <div
    className="nav-wrapper"
  >
    <ul
      className="nav--no-borders flex-column nav"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/new-client"
          onClick={[Function]}
        >
          <div
            className="d-inline-block item-icon-wrapper"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<i class=\\"material-icons\\">person_add</i>",
              }
            }
          />
          <span>
            Alta de cliente
          </span>
          
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/clients"
          onClick={[Function]}
        >
          <div
            className="d-inline-block item-icon-wrapper"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<i class=\\"material-icons\\">build</i>",
              }
            }
          />
          <span>
            Administrar clientes
          </span>
          
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link"
          href="/tracking"
          onClick={[Function]}
        >
          <div
            className="d-inline-block item-icon-wrapper"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<i class=\\"material-icons\\">my_location</i>",
              }
            }
          />
          <span>
            Tracking de clientes
          </span>
          
        </a>
      </li>
    </ul>
  </div>
</aside>
`;

exports[`MainSidebar components SidebarMainNavbar snapshot 1`] = `
<div
  className="main-navbar"
>
  <nav
    className="align-items-stretch bg-white flex-md-nowrap border-bottom p-0 navbar navbar-light"
  >
    <a
      className="w-100 mr-0 navbar-brand"
      href="#"
      style={
        Object {
          "lineHeight": "25px",
        }
      }
    >
      <div
        className="d-table m-auto"
      >
        <img
          alt="Logo"
          className="d-inline-block align-top mr-1"
          id="main-logo"
          src={Object {}}
          style={
            Object {
              "maxWidth": "25px",
            }
          }
        />
        <span
          className="d-none d-md-inline ml-1"
        >
          S.G.S.
        </span>
      </div>
    </a>
    <a
      className="toggle-sidebar d-sm-inline d-md-none d-lg-none"
      onClick={[Function]}
    >
      <i
        className="material-icons"
        id="hoa"
      >
        
      </i>
    </a>
  </nav>
</div>
`;

exports[`MainSidebar components SidebarNavItem snapshot 1`] = `
<li
  className="nav-item"
>
  <a
    aria-current={null}
    className="nav-link"
    href="/home"
    onClick={[Function]}
  >
    <div
      className="d-inline-block item-icon-wrapper"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<i class=\\"material-icons\\">my_location</i>",
        }
      }
    />
    <span>
      Mi ubicación
    </span>
    
  </a>
</li>
`;

exports[`MainSidebar components SidebarNavItems snapshot 1`] = `
<div
  className="nav-wrapper"
>
  <ul
    className="nav--no-borders flex-column nav"
  >
    <li
      className="nav-item"
    >
      <a
        aria-current={null}
        className="nav-link"
        href="/new-client"
        onClick={[Function]}
      >
        <div
          className="d-inline-block item-icon-wrapper"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<i class=\\"material-icons\\">person_add</i>",
            }
          }
        />
        <span>
          Alta de cliente
        </span>
        
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        aria-current={null}
        className="nav-link"
        href="/clients"
        onClick={[Function]}
      >
        <div
          className="d-inline-block item-icon-wrapper"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<i class=\\"material-icons\\">build</i>",
            }
          }
        />
        <span>
          Administrar clientes
        </span>
        
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        aria-current={null}
        className="nav-link"
        href="/tracking"
        onClick={[Function]}
      >
        <div
          className="d-inline-block item-icon-wrapper"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<i class=\\"material-icons\\">my_location</i>",
            }
          }
        />
        <span>
          Tracking de clientes
        </span>
        
      </a>
    </li>
  </ul>
</div>
`;
